--- a/package.json
+++ b/package.json
@@ -24,36 +24,46 @@
     "@angular/router": "^6.0.3",
     "angular2-notifications": "^2.0.0",
     "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.3",
-    "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
-    "ng2-charts": "^1.6.0",
-    "zone.js": "^0.8.26",
     "chai": "3.5.0",
+    "chart.js": "^2.7.3",
     "co-mocha": "1.1.2",
     "compression": "^1.7.3",
+    "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "jquery": "^3.3.1",
     "md5-typescript": "^1.0.5",
     "mysql": "^2.16.0",
+    "ng2-charts": "^1.6.0",
     "request-ip": "^2.1.3",
     "requestify": "^0.2.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "secure-ls": "^1.2.1",
-    "sequelize-auto": "^0.4.28"
+    "sequelize-auto": "^0.4.28",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.8",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "apidoc": "^0.17.6",
+    "async": "^2.4.1",
+    "async-foreach": "^0.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "base-64": "^0.1.0",
+    "body-parser": "^1.18.2",
     "codelyzer": "~4.2.1",
+    "cookies": "^0.7.0",
+    "cors": "^2.8.4",
+    "dateformat": "^3.0.2",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -61,18 +71,6 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
-    "apidoc": "^0.17.6",
-    "async": "^2.4.1",
-    "async-foreach": "^0.1.3",
-    "babel-preset-es2015": "^6.24.1",
-    "base-64": "^0.1.0",
-    "body-parser": "^1.18.2",
-    "cookies": "^0.7.0",
-    "cors": "^2.8.4",
-    "dateformat": "^3.0.2",
-    "express": "^4.16.2",
-    "fs": "0.0.1-security",
     "moment": "^2.20.1",
     "node-cron": "^1.2.1",
     "node-excel-export": "^1.4.2",
@@ -81,10 +79,12 @@
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
     "properties-reader": "0.0.16",
+    "protractor": "^5.4.1",
     "request": "^2.88.0",
-    "sequelize": "^3.30.4",
+    "sequelize": "^3.34.0",
     "tedious": "^2.0.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.8"
   }
 }
