--- a/package.json
+++ b/package.json
@@ -24,25 +24,25 @@
     "@angular/router": "^6.0.3",
     "angular2-notifications": "^2.0.0",
     "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.3",
-    "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
-    "ng2-charts": "^1.6.0",
-    "zone.js": "^0.8.26",
     "chai": "3.5.0",
+    "chart.js": "^2.7.3",
     "co-mocha": "1.1.2",
     "compression": "^1.7.3",
+    "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "jquery": "^3.3.1",
     "md5-typescript": "^1.0.5",
     "mysql": "^2.16.0",
+    "ng2-charts": "^1.6.0",
     "request-ip": "^2.1.3",
     "requestify": "^0.2.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "secure-ls": "^1.2.1",
-    "sequelize-auto": "^0.4.28"
+    "sequelize-auto": "^0.4.28",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
