--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@swimlane/ngx-charts": "^10.1.0",
+    "@types/d3-shape": "^1.3.1",
     "angular2-notifications": "^2.0.0",
     "bootstrap": "^4.1.3",
     "chai": "3.5.0",
@@ -30,6 +32,7 @@
     "compression": "^1.7.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "d3": "^5.9.2",
     "helmet": "^3.13.0",
     "jquery": "^3.3.1",
     "md5": "^2.2.1",
